--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>pangjie_common</artifactId>
+    <artifactId>common</artifactId>
 
     <!--依赖-->
     <dependencies>
