--- a/pagnjie_product/pom.xml
+++ b/pagnjie_product/pom.xml
@@ -20,7 +20,7 @@
         <!--common-->
         <dependency>
             <groupId>org.pangjie</groupId>
-            <artifactId>pangjie_common</artifactId>
+            <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!-- nacos-->
