--- a/pangjie_order/pom.xml
+++ b/pangjie_order/pom.xml
@@ -19,7 +19,7 @@
         <!--common-->
         <dependency>
             <groupId>org.pangjie</groupId>
-            <artifactId>pangjie_common</artifactId>
+            <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!--fegin_clien-->
