--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>pangjie_common</module>
+        <module>common</module>
         <module>pangjie_user</module>
         <module>pagnjie_product</module>
         <module>pangjie_order</module>
         <module>feign_client</module>
-        <module>pangjie_gateway</module>
+        <module>gateway</module>
     </modules>
 
     <parent>
