--- a/pangjie_order/pom.xml
+++ b/pangjie_order/pom.xml
@@ -11,39 +11,29 @@
 
     <artifactId>pangjie_order</artifactId>
     <dependencies>
-        <!--springboot-web-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <!--common-->
+
+        <!--fegin_clien-->
         <dependency>
             <groupId>org.pangjie</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!--fegin_clien-->
         <dependency>
             <groupId>org.pangjie</groupId>
             <artifactId>feign_client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-<!--===========================================================-->
-        <!-- nacos-->
+        <!--springboot-web-->
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--        openfeign-->
+
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-        <!--容错sentinel-->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+            <groupId>org.pangjie</groupId>
+            <artifactId>pom</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
