--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
         <module>pangjie_order</module>
         <module>feign_client</module>
         <module>gateway</module>
+        <module>auth</module>
+        <module>auth</module>
+        <module>auth</module>
+        <module>auth</module>
+        <module>pom</module>
     </modules>
 
     <parent>
